fix text color for contrast

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 
 p {
     font-size: 15px;
-    color: var(--text-color)
+    color: var(--white)
 }
 
 a {
